Changelog
=========

0.10 (unreleased)
-----------------

- Generate scales when we add images in and edm listing.
  [thomasdesvenain]


0.9 (2013-03-20)
----------------

- Plone 4.3 compatible.


0.8 (2013-02-15)
----------------

- Class that gets folder contents and renders a table is a multi adapter
  on context and request.
  [thomasdesvenain]

- German translation.
  [thomasdesvenain]


0.7 (2012-11-06)
----------------

- Added a column to quick view images in an overlay.
  [thomasdesvenain]


0.6 (2012-09-10)
----------------

- Do not display state column in folders where all contents have no workflow.
  [thomasdesvenain]


0.5 (2012-08-29)
----------------

- If we have a sortable_size index, we can sort by size.
  [thomasdesvenain]

- We can sort by review state.
  [thomasdesvenain]


0.4 (2012-08-24)
----------------

- Added columns have an 'available' method.
  [thomasdesvenain]

- Added columns can be sortable on an index
  if sort_index attribute is set on column class.
  [thomasdesvenain]

- Fixed batching with default sort_on.
  [vincentfretin]

- Folder buttons displays are consistent with listing columns global displays.
  (if 'delete' column is disabled or empty, 'delete' button is not displayed')
  [thomasdesvenain]

- Paste button is separated to "selected elements" folder action buttons (delete, paste, etc).
  [thomasdesvenain]

- ecreall.trashcan integration.
  [thomasdesvenain]

- Added a view "listingoptions" that allows to setup some behaviours:
    - sort mode
    - default sort criterion
    - default sort order
    - edit popup activated or not
  [thomasdesvenain]

- Improve transition form behaviour.
  [thomasdesvenain]

- Fix error at startup:
  "Couldn't import plone_displayviews, No module named plone_displayviews".
  [thomasdesvenain]

- Do not force content views.
  [thomasdesvenain]


0.3 (2012-08-01)
----------------

- Move to github.
  [thomasdesvenain]

- Chameleon compatible.
  [thomasdesvenain]
